# symbolic-regression-and-pinn

./: .gitignore  4s8p_gp.py  README.md  environment.yml  pyproject.toml  readme.md  skills-lock.json
.agents/skills/research-lookup/: SKILL.md
engine/: LICENSE
engine/frontend/: app.py
engine/pinn_sr/: research_two_pinns.py
fluids/: generator.py  latent_sde_burgers2d_cnn.ipynb  latent_sde_navier_stokes2d_cnn.ipynb  latent_sde_sciml_score_bridge.ipynb  neural_sde.py  trajectories.py
frontend/: requirements.txt
models/: equation_validation.json  pinn_torchdiffeq.pth  pysr_ve_model.pkl  sindy_coefficients.npy  sindy_features.txt  ve_equation.txt  ve_layer_pytorch.pth
pinn_sr/: pinn_torchdiffeq.py  sim_data.py  sim_motor.py  sr_sindy.py
utils/: julia-pckg.jl  r-pckg.R
