[project]
name = "dynamical-sys"
version = "0.1.0"
description = ""
authors = [
    {name = "none"}
]
license = ",it"
requires-python = "3.12.8"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "torchsde (>=0.2.6,<0.3.0)",
    "deepxde (>=1.15.0,<2.0.0)",
    "jax (>=0.9.2,<0.10.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "equinox (>=0.13.6,<0.14.0)",
    "optax (>=0.2.8,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
